# nodepy

./: Cargo.toml  README.md  build.sh  buildWin.bat  package.json  startWin.bat  test.js
py/: __init__.py  main.py  main2.py
src/: README.md  build.sh  lib.rs  package.json
src/lib/: index.js
src/native/: Cargo.toml
src/native/src/: lib.rs
src/py/: main.py
