
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "nodepy"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
