[package]
name = "myproj"
version = "0.1.0"
authors = ["xhsiung <xhsiung@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "myproj"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
pyo3 = "0.10.1"
